--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Main Landing Page</title>
 </head>
 <body>
     <nav class="relative container mx-auto p-6">
         <div class="flex items-center justify-between">
             <div class="pt-2">
-                <img src="../img/logo.svg" alt="">
+                <img src="./img/logo.svg" alt="">
             </div>
             <div class="hidden md:flex space-x-6">
                 <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
@@ -56,7 +56,7 @@
             </div>
             <!--Image-->
             <div class="md:w-1/2">
-                <img src="../img/illustration-intro.svg" alt="">
+                <img src="./img/illustration-intro.svg" alt="">
             </div>
         </div>
     </section>
@@ -150,7 +150,7 @@
             <!--Testimonial-->
             <div class="flex flex-col mt-24 md:flex-row md:space-x-6">
                 <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/3">
-                    <img src="../img/avatar-anisha.png" alt="" class="w-16 -mt-14">
+                    <img src="./img/avatar-anisha.png" alt="" class="w-16 -mt-14">
                     <h5 class="text-lg font-bold">Anisha Li</h5>
                     <p class="text-sm text-darkGrayishBlue">
                         "Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated."
@@ -158,7 +158,7 @@
                 </div>
             <!--Testimonial-->
                 <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
-                    <img src="../img/avatar-ali.png" alt="" class="w-16 -mt-14">
+                    <img src="./img/avatar-ali.png" alt="" class="w-16 -mt-14">
                     <h5 class="text-lg font-bold">Ali Bravo</h5>
                     <p class="text-sm text-darkGrayishBlue">
                         "We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confustion and everyone is much more focused."
@@ -166,7 +166,7 @@
                 </div>
             <!--Testimonial-->
                 <div class="hidden flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/3">
-                    <img src="../img/avatar-richard.png" alt="" class="w-16 -mt-14">
+                    <img src="./img/avatar-richard.png" alt="" class="w-16 -mt-14">
                     <h5 class="text-lg font-bold">Richard Watts</h5>
                     <p class="text-sm text-darkGrayishBlue">
                         "Manage has supercharged our team's workflow. The ability to maintain visibility on larger milestones at all times keeps everyone motivated."
@@ -200,23 +200,23 @@
                     Copyright &copy; 2022, All Rights Reserved
                 </div>
                 <div>
-                    <img src="../img/logo-white.svg" class="h-8" alt="">
+                    <img src="./img/logo-white.svg" class="h-8" alt="">
                 </div>
                 <div class="flex justify-center space-x-4">
                     <a href="#">
-                        <img src="../img/icon-facebook.svg" alt="" class="h-8">
+                        <img src="./img/icon-facebook.svg" alt="" class="h-8">
                     </a>
                     <a href="#">
-                        <img src="../img/icon-youtube.svg" alt="" class="h-8">
+                        <img src="./img/icon-youtube.svg" alt="" class="h-8">
                     </a>
                     <a href="#">
-                        <img src="../img/icon-twitter.svg" alt="" class="h-8">
+                        <img src="./img/icon-twitter.svg" alt="" class="h-8">
                     </a>
                     <a href="#">
-                        <img src="../img/icon-pinterest.svg" alt="" class="h-8">
+                        <img src="./img/icon-pinterest.svg" alt="" class="h-8">
                     </a>
                     <a href="#">
-                        <img src="../img/icon-instagram.svg" alt="" class="h-8">
+                        <img src="./img/icon-instagram.svg" alt="" class="h-8">
                     </a>
                 </div>
             </div>
@@ -250,6 +250,6 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
